homelab/infrastructure/platform/config/traefik-service-patch.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: traefik
  annotations:
    metallb.universe.tf/loadBalancerIPs: "192.168.1.19"
spec:
  type: LoadBalancer
