homelab/infrastructure/platform/config/traefik-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: traefik-custom
  namespace: traefik
  labels:
    app.kubernetes.io/instance: traefik-traefik
    app.kubernetes.io/name: traefik
  annotations:
    metallb.universe.tf/loadBalancerIPs: '192.168.1.19'
spec:
  type: LoadBalancer
  ports:
    - name: web
      port: 80
      protocol: TCP
      targetPort: web
    - name: websecure
      port: 443
      protocol: TCP
      targetPort: websecure
  selector:
    app.kubernetes.io/instance: traefik-traefik
    app.kubernetes.io/name: traefik
  externalTrafficPolicy: Cluster
